# DETECCAO-DE-GESTOS-COM-AUTOMACAO

./: README.md  pyproject.toml
app/: main.ipynb  main.py
