[tool.poetry]
name = "deteccao-de-gestos-com-automacao"
version = "0.1.0"
description = ""
authors = ["Antony F. Ferreira <antonyfferreira@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
